Updating endpoint to return pull request data